--- a/about.css
+++ b/about.css
@@ -1,3 +1,7 @@
+body {
+  text-align: center;
+}
+
 .names{
   font-size: 20px;
   margin-top: 5;
@@ -45,8 +49,8 @@
   margin-bottom: 8px;
 }
 .headshots{
-  width:325px;
-  height: 325px;
+  max-width: 85%;
+  width: auto;
 }
 .close{
   float: right;
