--- a/archive.css
+++ b/archive.css
@@ -1,4 +1,5 @@
 body {
+  text-align: center;
   background-image: url("imgs/greyBackground.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -7,4 +8,5 @@ body {
 
 .oldProjects {
   font-size: 25px;
+  text-align: left;
 }
