--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  text-align: center;
+}
+
 h1{
   font-size: 270%;
   text-align: center
@@ -49,11 +53,22 @@ h1{
   width: auto;
   overflow: hidden;
   height: 100%;
-  /* padding: 4px; */
 }
 
 .row .column img{
   margin-top: 2%;
   width: 100%;
   height: 100%;
+}
+
+@media only screen and (max-width: 800px){
+  .row .column{
+    flex: 50%
+  }
+}
+
+@media only screen and (max-width: 650px){
+  .row .column{
+    flex: 100%
+  }
 }
