--- a/archive.css
+++ b/archive.css
@@ -10,3 +10,28 @@ body {
   font-size: 25px;
   text-align: left;
 }
+
+
+.projects {
+  text-align: left;
+  padding: 0px 20px 0px;
+}
+
+@media only screen and (max-width: 425px){
+
+  .navbar{
+    display: block !important;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+  .nav{
+    display: flex;
+  }
+
+  .navbar-brand{
+  margin: 0;
+  padding:  0 !important;
+  padding-right: 0.5rem !important;
+
+  }
+}
