--- a/style.css
+++ b/style.css
@@ -13,11 +13,21 @@ h1{
   text-transform: uppercase
 }
 
+.club_contact{
+  font-size: 50%;
+} 
+
+/* .navbar-brand{
+  margin: 0;
+  padding: 0 !important;
+
+} */
+
 .s_icons{
   /* width: 100%;
   height: 100%; */
-  font-size:230%;
-  color: black;
+  font-size:220%;
+  color: #f2f3f4;
 }
 
 .names{
@@ -37,15 +47,15 @@ h1{
   font-size: 205%;    
 }
 
-.headshots{
-  width: 175%
-}
-
-
 .row{
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+  padding: 0
+}
+
+.gallery .container-fluid{
+  padding:0;
 }
 
 .row .column{
@@ -67,8 +77,193 @@ h1{
   }
 }
 
+/*phone size*/
+@media only screen and (max-width: 425px){
+  .header-primary{
+    font-size: 30px;
+    font-weight: 400;
+  }
+  .navbar{
+    display: block !important;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+
+  }
+  
+  .logo-img{
+    width: 80% !important;
+  }
+  .header-primary-sub{
+    font-size: 20px !important;
+    font-weight: 300 !important;
+    line-height: normal;
+    padding-bottom: 20px !important;
+  }
+  .nav{
+    display: flex;
+  }
+
+  .navbar-brand{
+  margin: 0;
+  padding:  0 !important;
+  padding-right: 0.5rem !important;
+
+  }
+}
+
 @media only screen and (max-width: 650px){
   .row .column{
     flex: 100%
+  }
+}
+
+
+
+
+
+
+
+
+
+.header {
+    background-image: linear-gradient(to right bottom, rgba(64, 64, 64, 0.8), rgba(0, 0, 0, 0.8)), url("imgs/codingImg.jpg");
+    height: 100vh;
+    margin-bottom: 0px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* fills background in element */
+    /* doesnt crop the top of img */
+    position: relative;
+    text-align: center;
+    display: flex;
+}
+
+.behind-header {
+    height: 85vh;
+    width: 100vw;
+    position: absolute;
+    top: 60px;
+    background: linear-gradient(to bottom, #000000, #fff);
+    z-index: -1;
+}
+
+.logo-box {
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 10px;
+    z-index: 1;
+}
+
+.logo-content-container {
+    position: sticky;
+    top: 70px;
+    left: 0;
+}
+
+.logo-link {
+    text-decoration: none;
+    color: #ec9b3b;
+}
+
+.logo-link:hover {
+    text-decoration: none;
+    color: #ec9b3b;
+}
+
+.logo-img {
+    /*height: 220px;
+    height: 10%; */
+    width: 60%;
+    margin-bottom: -10px;
+    animation: logoMoveDownFromTop 2s;
+    
+}
+
+.logo-caption {
+    position: sticky;
+    font-weight: 700;
+    animation: fadeIn 3s;
+}
+
+
+.text-box {
+  position: absolute;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+}
+ 
+
+
+.header-primary {
+    backface-visibility: hidden;
+    margin-top: 0px;
+    /* fix shaking in animations */
+}
+
+.header-primary-main {
+  font-weight: 400;
+  font-size: 170%;
+  color: rgb(236, 114, 51);
+  display: block;
+  letter-spacing: 5px;
+  padding-bottom: 20px;
+  animation: moveInFromLeft 2s ease-out;
+}
+
+.header-primary-sub {
+  color: rgb(222, 124, 64);
+  font-weight: 650;
+  font-size: 25px;
+  display: block;
+  padding-bottom: 30px;
+
+  animation: moveInFromRight 2s ease-out;
+}
+
+@media only screen and (max-width: 50px;) {
+  .header-primary-main {
+    font-size: 20%;
+    flex: 20%;
+  }
+}
+
+
+
+@media only screen and (max-width: 345px){
+  .header-primary{
+    /*font-size: 25px; */
+    font-size: 100%;
+    font-weight: 400;
+  }
+  .navbar{
+    display: block !important;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+
+  }
+  
+  .logo-img{
+    width: 80% !important;
+  }
+  .header-primary-sub{
+    font-size: 15px !important;
+    font-weight: 300 !important;
+    line-height: normal;
+    padding-bottom: 20px !important;
+  }
+  .nav{
+    display: flex;
+  }
+
+  .navbar-brand{
+  margin: 0;
+  padding:  0 !important;
+  padding-right: 0.5rem !important;
+
   }
 }
