--- a/css/archive.css
+++ b/css/archive.css
@@ -2,6 +2,7 @@ body {
   text-align: center;
   background-image: url("../imgs/archiveImgs/greyBackground.jpg");
   background-repeat: no-repeat;
+/*   background-color: rgb(244, 245, 246); */
   background-attachment: fixed;
   background-size: cover;
 }
