--- a/css/darkMode/dResources.css
+++ b/css/darkMode/dResources.css
@@ -13,8 +13,8 @@
   font-size: 2.3em;
 }
 
-.arrow_div{
-    color: rgb(234, 142, 12);
+.arrow_div {
+  color: rgb(234, 142, 12);
 }
 
 .arrow_div:hover {
@@ -58,6 +58,18 @@
   margin-left: 1% !important;
   margin-right: 1% !important;
   margin-bottom: 2% !important;
+  cursor: pointer !important;
+}
+
+
+
+.resource:hover .linkName {
+  color: rgb(234, 142, 12) !important;
+}
+
+
+.linkNameDark {
+  color: white !important;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -95,7 +107,7 @@ background-color: rgb(12, 12, 9) !important; */
 .resourceDisc {
   /* text-align: justify; */
   font-size: 1em;
-  color: rgb(243, 243, 246) !important;
+  color: rgb(243, 243, 246);
 }
 
 
@@ -116,11 +128,10 @@ background-color: rgb(12, 12, 9) !important; */
 
 .linkName {
   font-size: 1.75em;
-  color: black;
   text-decoration: none;
   display: block;
   padding-bottom: 0.75vh;
-  color: rgb(243, 243, 246) !important;
+  color: rgb(243, 243, 246);
 }
 
 .resourceImg {
@@ -147,6 +158,7 @@ background-color: rgb(12, 12, 9) !important; */
 
 .linkName:hover {
   cursor: pointer;
+  /* color: red !important; */
 }
 
 .readMore:hover {
